@@ -2,7 +2,7 @@
 
 [General Info]
 Version=1
-LastClass=CMainFrame
+LastClass=CNewVal
 LastTemplate=CDialog
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "psycle.h"
@@ -50,48 +50,48 @@ Class38=CWaveOutDialog
 Class39=CWavFileDlg
 
 ResourceCount=42
-Resource1=IDD_GEAR_FLANGER (Neutral (Default))
-Resource2=IDD_CONFIGURATION (Neutral (Default))
-Resource3=IDD_GREETS (Neutral (Default))
-Resource4=IDD_GEAR_DELAY (Neutral (Default))
-Resource5=IDD_INST_EDITOR (Neutral (Default))
-Resource6=IDD_GEAR_TRACKER (Neutral (Default))
+Resource1=IDD_SKIN (Neutral (Default))
+Resource2=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource3=IDD_GEAR_DELAY (Neutral (Default))
+Resource4=IDD_PATDLG (Neutral (Default))
+Resource5=IDD_PSYBAR (Neutral (Default))
+Resource6=IDD_MACPROP (Neutral (Default))
 Resource7=IDD_INST_GENERAL (Neutral (Default))
-Resource8=IDD_MASTERDLG (Neutral (Default))
-Resource9=IDD_INFO (Neutral (Default))
-Resource10=IDD_SKIN (Neutral (Default))
-Resource11=IDD_INSTRUMENT (Neutral (Default))
-Resource12=IDD_NEWMACHINE (Neutral (Default))
-Resource13=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource14=IDD_WIREDIALOG (Neutral (Default))
-Resource15=IDD_ENVDIALOG (Neutral (Default))
-Resource16=IDD_PSYBAR (Neutral (Default))
-Resource17=IDD_PSYBAR2 (Neutral (Default))
+Resource8=IDD_SONGPROP (Neutral (Default))
+Resource9=IDD_PSYBAR2 (Neutral (Default))
+Resource10=IDR_MACHINEFRAME (Neutral (Default))
+Resource11=IDD_KEYCONFIG (Neutral (Default))
+Resource12=IDD_PRESETS (Neutral (Default))
+Resource13=IDD_INST_EDITOR (Neutral (Default))
+Resource14=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource15=IDD_INSTRUMENT (Neutral (Default))
+Resource16=IDR_WAVEFRAME (Neutral (Default))
+Resource17=IDD_MIDI_INPUT
 Resource18=IDR_POPUPMENU (Neutral (Default))
-Resource19=IDD_VSTRACK (Neutral (Default))
-Resource20=IDR_MACHINEFRAME (Neutral (Default))
-Resource21=IDD_KEYCONFIG (Neutral (Default))
-Resource22=IDD_MIDI_LEARN
-Resource23=IDD_MIDI_MONITOR (Neutral (Default))
-Resource24=IDD_GEAR_GAINER (Neutral (Default))
-Resource25=IDD_PRESETS (Neutral (Default))
-Resource26=IDD_GEAR_FILTER (Neutral (Default))
-Resource27=IDD_ABOUTBOX (Neutral (Default))
-Resource28=IDD_SEQUENCER (Neutral (Default))
+Resource19=IDD_GEAR_FLANGER (Neutral (Default))
+Resource20=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource21=IDD_VSTRACK (Neutral (Default))
+Resource22=IDD_NEWMACHINE (Neutral (Default))
+Resource23=IDD_NEWVAL (Neutral (Default))
+Resource24=IDD_GREETS (Neutral (Default))
+Resource25=IDD_MASTERDLG (Neutral (Default))
+Resource26=IDD_GEAR_TRACKER (Neutral (Default))
+Resource27=IDD_MIDI_MONITOR (Neutral (Default))
+Resource28=IDD_DIRECTORIES (Neutral (Default))
 Resource29=IDR_VSTFRAME (Neutral (Default))
-Resource30=IDD_WAVEOUTCONFIG (Neutral (Default))
-Resource31=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource32=IDD_NEWVAL (Neutral (Default))
-Resource33=IDD_PATDLG (Neutral (Default))
-Resource34=IDD_OUTPUT (Neutral (Default))
-Resource35=IDR_WAVEFRAME (Neutral (Default))
-Resource36=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource37=IDD_GEARDISTORT (Neutral (Default))
-Resource38=IDD_MIDI_INPUT
-Resource39=IDD_DIRECTORIES (Neutral (Default))
-Resource40=IDD_MACPROP (Neutral (Default))
+Resource30=IDD_MIDI_LEARN
+Resource31=IDD_OUTPUT (Neutral (Default))
+Resource32=IDD_GEAR_GAINER (Neutral (Default))
+Resource33=IDD_WIREDIALOG (Neutral (Default))
+Resource34=IDD_ABOUTBOX (Neutral (Default))
+Resource35=IDD_GEARDISTORT (Neutral (Default))
+Resource36=IDD_ENVDIALOG (Neutral (Default))
+Resource37=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Resource38=IDD_CONFIGURATION (Neutral (Default))
+Resource39=IDD_SEQUENCER (Neutral (Default))
+Resource40=IDD_INFO (Neutral (Default))
 Class40=CMidiInputDlg
-Resource41=IDD_SONGPROP (Neutral (Default))
+Resource41=IDD_GEAR_FILTER (Neutral (Default))
 Class41=CMidiLearn
 Resource42=IDR_MAINFRAME (Neutral (Default))
 
@@ -250,7 +250,7 @@ Type=0
 BaseClass=CFrameWnd
 HeaderFile=MainFrm.h
 ImplementationFile=MainFrm.cpp
-LastObject=IDC_SEQLIST
+LastObject=CMainFrame
 Filter=T
 VirtualFilter=fWC
 
@@ -284,7 +284,9 @@ Type=0
 BaseClass=CDialog
 HeaderFile=NewVal.h
 ImplementationFile=NewVal.cpp
-LastObject=CNewVal
+LastObject=IDC_EDIT1
+Filter=D
+VirtualFilter=dWC
 
 [CLS:COutputDlg]
 Type=0
@@ -993,10 +995,11 @@ Control3=IDC_AUTODEC,button,1342242819
 [DLG:IDD_NEWVAL (Neutral (Default))]
 Type=1
 Class=?
-ControlCount=3
+ControlCount=4
 Control1=IDC_EDIT1,edit,1342242816
 Control2=IDOK,button,1342242817
 Control3=IDCANCEL,button,1342242816
+Control4=IDC_TEXT,static,1342312961
 
 [DLG:IDD_PRESETS (Neutral (Default))]
 Type=1
